foto de perfil agregada

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!---about--->
 	<section class="about" id="about">
 		<div class="about-img">
-			<!---<img src="img/about.png">--->
+			<img src="img/perfil.png">
 		</div>
 
 		<div class="about-text">
