[UPD] Agregada la sección certificaciones y mejoras a los modos dark/ligh

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 			<li><a href="#about">About Me</a></li>
 			<li><a href="#experience">Experience</a></li>
 			<li><a href="#skills">Skills</a></li>
-			<li><a href="#portfolio">My Portfolio</a></li>
+			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#certifications">Certifications</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 
-		<div class="btn header-buttons">
+		<div class="header-buttons">
 			<button id="theme-toggle" class="btn theme-toggle" aria-label="Toggle theme">
 				<i class='bx bx-moon'></i>
 			</button>
@@ -241,6 +242,29 @@
 				<h3>Mobile app landing design & Services</h3>
 			</div>
 
+		</div>
+	</section>
+
+	<!---certifications--->
+	<section class="portfolio" id="certifications">
+		<div class="main-text">
+			<h2>My Certifications</h2>
+			<h4>Enjoying the trip</h4>
+		</div>
+
+		<div class="experience-content">	
+			<div class="box">
+				<img src="img/serv1.png" alt="Software Development Icon">
+				<h3>Certifications</h3>
+				<ul class="experience-list">
+					<li><a href="https://freecodecamp.org/certification/fcc732d1744-b5b4-439f-9c80-f657af7e39a6/foundational-c-sharp-with-microsoft" target="_blank">Foundational C# with Microsoft</a></li>
+					<li><a href="https://platzi.com/p/victorguilarte91/curso/3208-programacion-basica/diploma/detalle/" target="_blank">Curso Gratis de Programación Básica</a></li>
+					<li><a href="https://platzi.com/p/victorguilarte91/curso/2883-fundamentos-net/diploma/detalle/" target="_blank">Curso de Fundamentos de .NET</a></li>
+					<li><a href="https://platzi.com/p/victorguilarte91/curso/2198-csharp-introduccion/diploma/detalle/" target="_blank">Curso de Introducción a C# con .NET 3.1</a></li>
+					<li><a href="https://drive.google.com/file/d/1vxllvvs85t7UU7hicXu6utk2wFNKIHNn/view?usp=drivesdk" target="_blank">Scrum Foundation Professional Certification SFPC</a></li>
+					<li><a href="efset.org/cert/GFhr7J" target="_blank">EFSET English Certificate 67/100 (C1 Advanced)</a></li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
