[UPD] Agregado mulitilenguaje en-es

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 
+		<div id="flags" class="flags">
+			<div class="flags-item" title="English" data-lang="en">
+				<img src="img/gb.svg" alt="English Flag">
+			</div>
+			<div class="flags-item" title="Spanish" data-lang="es">
+				<img src="img/es.svg" alt="Spanish Flag">
+			</div>
+		</div>
 		<div class="header-buttons">
 			<button id="theme-toggle" class="btn theme-toggle" aria-label="Toggle theme">
 				<i class='bx bx-moon'></i>
