--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 		</div>
 
 		<div class="contact-form">
-			<form action="" method="POST">
+			<form id="contactForm" class="contact-form">
 				<div class="form-group">
 					<label for="name" class="visually-hidden" data-text="contact_form_name">Name</label>
 					<input type="text" id="name" name="name" data-text="contact_form_name_placeholder" placeholder="Enter Your Name" required>
@@ -327,9 +327,8 @@
 	<!---scroll-top--->
 	<a href="#" class="top"><i class='bx bx-up-arrow-alt' ></i></a>
 
+	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 	<script src="https://unpkg.com/scrollreveal"></script>
-
-	<!---custom js link--->
 	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
