[ADD] Agregado el logo y mejoras en la distribución del home

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!---header--->
 	<header>
 		<a href="#" class="logo" aria-label="Home">
-			<img alt="Victor Guilarte Logo" width="135" height="40">
+			<img src="img/VAGL_logo2Mini.jpg" alt="Victor Guilarte Logo">
 		</a>
 
 		<ul class="navbar">
